# ownserver-client-gui

./: .editorconfig  .gitignore  404.html  CNAME  README.md  check_version.sh  feed.xml  index.html  inquiry.html  package.json  tsconfig.json  verify_translation.sh  wdio.conf.js
.github/workflows/: build.yaml  build_docs.yml  rebuild.yaml  test.yaml
assets/css/: style.css
docs/: CNAME  Gemfile  _config.yml  index.markdown  inquiry.md  style.css
docs/_i18n/: en.yml  ja.yml
docs/_i18n/en/: inquiry.md
docs/_i18n/en/games/: custom.md  factorio.md  index.md  minecraft.md  minecraft_be.md  minecraft_forge.md
docs/_i18n/ja/: inquiry.md
docs/_i18n/ja/games/: custom.md  factorio.md  index.md  minecraft.md  minecraft_be.md  minecraft_forge.md
docs/_includes/: footer.html  head-custom-google-analytics.html  header.html
docs/_layouts/: landing.html  pages.html
docs/games/: custom.markdown  custom.md  factorio.markdown  factorio.md  index.md  minecraft.markdown  minecraft.md  minecraft_be.md  minecraft_forge.md
docs/ja/: index.markdown
docs/ja/games/: minecraft.markdown
en/: 404.html  feed.xml  index.html  inquiry.html  site.webmanifest  style.css
en/games/: custom.html  factorio.html  index.html  minecraft.html  minecraft_be.html  minecraft_forge.html
games/: custom.html  factorio.html  index.html  minecraft.html  minecraft_be.html  minecraft_forge.html
lima/: bootstrap.sh  lima.yaml
public/locales/en/: translation.json
public/locales/ja/: translation.json
src/: App.tsx  Forms.tsx  Inquiry.tsx  Steps.tsx  checks.test.js  checks.ts  common.ts  data.ts  i18n.js  index.tsx  inquiry.ts  types.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  logger.rs  main.rs
src/app/: persist.test.ts  persist.ts  store.ts
src/features/: configSlice.ts  envSlice.ts  gameSlice.ts  localSlice.ts  localSlide.test.ts  tauriSlice.ts  tunnelSlice.ts
src/features/reducers/games/: custom.ts  factorio.ts  minecraft.ts  minecraftBe.ts  (+1 more)
src/forms/: Form.tsx  FormCustom.tsx  FormFactorio.tsx  FormMinecraft.tsx  FormMinecraftBe.tsx  FormMinecraftForge.tsx  FormNotFound.tsx  index.ts
src/forms/components/: FormFooter.tsx  GameTaskSection.tsx
src/steps/: StepContent.tsx  StepLauchLocalServer.tsx  StepLaunchTunnel.tsx  StepMonitoring.tsx  StepSelectGame.tsx  Steps.tsx  index.ts  types.ts
test/specs/: example.e2e.js  run_custom_nc.js  run_minecraft.js
