[package]
name = "ownserver-client-gui"
version = "0.8.0"
description = "OwnServer Client GUI"
authors = ["Kumassy"]
license = ""
repository = ""
default-run = "ownserver-client-gui"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "updater"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
ownserver = { git = "https://github.com/Kumassy/ownserver.git", branch = "main", version = "0.5.0" }
ownserver_lib = { git = "https://github.com/Kumassy/ownserver.git", branch = "main", version = "0.5.0" }
lazy_static = "1.4"
log = "0.4"
futures = "0.3"
pretty_env_logger = "0.4"
thiserror = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
