[package]
name = "ownserver-client-gui"
version = "0.10.3"
description = "OwnServer Client GUI"
authors = ["Kumassy"]
license = ""
repository = ""
default-run = "ownserver-client-gui"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
ownserver = { git = "https://github.com/Kumassy/ownserver.git", branch = "main", version = "0.7.0" }
ownserver_lib = { git = "https://github.com/Kumassy/ownserver.git", branch = "main", version = "0.7.0" }
lazy_static = "1.5"
log = "0.4"
futures = "0.3.21"
pretty_env_logger = "0.5"
thiserror = "2.0"
chrono = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
